// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should set primary checkbox style 1`] = `
.c0 {
  display: inline-block;
  vertical-align: middle;
  line-height: 1;
}

.c0:focus-visible {
  outline: 1px solid #85B4C3;
}

.c2 {
  position: relative;
  display: inline-block;
  box-sizing: content-box;
  border: solid 1px #27566D;
  border-radius: 2px;
  width: 12px;
  height: 12px;
}

.c1 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

<div>
  <div
    class="c0"
    role="checkbox"
    tabindex="0"
  >
    <input
      class="c1"
      id="@checkbox-1"
      type="checkbox"
    />
    <div
      class="c2"
      type="primary"
    />
  </div>
</div>
`;

exports[`should set secondary checkbox style 1`] = `
.c0 {
  display: inline-block;
  vertical-align: middle;
  line-height: 1;
}

.c0:focus-visible {
  outline: 1px solid #85B4C3;
}

.c2 {
  position: relative;
  display: inline-block;
  box-sizing: content-box;
  border: solid 1px rgba(39,86,109,0.2);
  background: rgba(119,163,187,0.05);
  border-radius: 4px;
  width: 15px;
  height: 15px;
}

.c1 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

<div>
  <div
    class="c0"
    role="checkbox"
    tabindex="0"
  >
    <input
      class="c1"
      id="@checkbox-1"
      type="checkbox"
    />
    <div
      class="c2"
      type="secondary"
    />
  </div>
</div>
`;
